--- a/TP - Heroes (clase 7)/css/styles.css
+++ b/TP - Heroes (clase 7)/css/styles.css
@@ -6,7 +6,7 @@
 
 body {
 	font-family: 'New Tegomin', serif;
-    background-color: rgb(182, 187, 192);
+    background-color: #fff;
 }
 
 main {
@@ -42,6 +42,7 @@ h2 {
     width: 400px;
     height: 700px;
     background-color: rgba(128, 191, 207, 0.726);
+	box-shadow: 10px 10px 8px #303030;
 }
 
 .heart {
@@ -51,8 +52,6 @@ h2 {
     padding: 30px;
 }
 
-/* ------ Header */
-
 .profile {
 	width: 150px;
 	height: 150px;
@@ -60,11 +59,28 @@ h2 {
     top: 150px;
     left: 120px;
 	border-radius: 50%;
-    background-size: cover;
-    background-position: center;
 }
 
-/* ------- */
+.img-super-1 {
+	background-image: url(../img/batman.jpg);
+	background-repeat: no-repeat;
+	background-position: 60% 100%;
+	background-size: cover;
+}
+
+.img-super-2 {
+	background-image: url(../img/wonderw.jpg);
+	background-repeat: no-repeat;
+	background-position: 50% 100%;
+	background-size: cover;
+}
+
+.img-super-3 {
+	background-image: url(../img/superman.jpg);
+	background-repeat: no-repeat;
+	background-position: 45% 100%;
+	background-size: cover;
+}
 
 .background {
 	width: 400px;
@@ -76,10 +92,6 @@ h2 {
 	background-position: center;
 }
 
-/* ----------BODY */
-
-
-
 .parag {
 	position: absolute;
 	text-align: justify;
@@ -87,21 +99,21 @@ h2 {
 }
 
 .btn {
-	width: 340px;
-	height: 80px;
+	width: 180px;
+	height: 60px;
 	background-color: #00669f;
 	font-size: 25px;
 	color: white;
     position: relative;
-	top: 220px;
-	left: 30px;
+	top: 240px;
+	left: 100px;
     border-radius: 10px;
 }
 
 .btn a {
     text-align: center;
     position: relative;
-    top: 20px;
+    top: 10px;
 }
 
 footer {
